--- a/src/bunit/bunit.csproj
+++ b/src/bunit/bunit.csproj
@@ -21,6 +21,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\bunit.core\bunit.core.csproj" />
 	  <ProjectReference Include="..\bunit.web\bunit.web.csproj" />
 	</ItemGroup>
