--- a/src/bunit.core/bunit.core.csproj
+++ b/src/bunit.core/bunit.core.csproj
@@ -14,40 +14,17 @@
 		</Description>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet3Version)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet3Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet3Version)" />
+	<ItemGroup>
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet5Version)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet5Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet5Version)" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet6Version)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet6Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet6Version)" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet7Version)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet7Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet7Version)" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet8Version)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet8Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet8Version)" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet9Version)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet9Version)" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet9Version)" />
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging"  />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" />
 	</ItemGroup>
 
 </Project>
