--- a/src/bunit.template/bunit.template.csproj
+++ b/src/bunit.template/bunit.template.csproj
@@ -18,8 +18,15 @@
 		</PackageDescription>
 		<IncludeContentInPack>true</IncludeContentInPack>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
-		<ContentTargetFolders>content</ContentTargetFolders>		
+		<ContentTargetFolders>content</ContentTargetFolders>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 
 	<ItemGroup>
 		<Content Include="template\**\*" Exclude="template\**\bin\**;template\**\obj\**;template\**\.vs\**" />
@@ -29,7 +36,7 @@
 		<EmbeddedResource Remove="template\obj\**" />
 		<None Remove="template\obj\**" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 	  <None Remove="template\CounterRazorTests.razor" />
 	</ItemGroup>
