--- a/tests/bunit.core.tests/bunit.core.tests.csproj
+++ b/tests/bunit.core.tests/bunit.core.tests.csproj
@@ -11,4 +11,9 @@
 		<ProjectReference Include="..\..\src\bunit.web\bunit.web.csproj" />
 		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="../xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+	
 </Project>
