ci: remove NU5128 warning

--- a/src/bunit/bunit.csproj
+++ b/src/bunit/bunit.csproj
@@ -4,6 +4,7 @@
 		<NoBuild>true</NoBuild>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<IncludeSymbols>false</IncludeSymbols>
+		<NoWarn>$(NoWarn);NU5128</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup>
