--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,18 +143,7 @@ jobs:
           dotnet tool restore
 
       - name: 🧪 Run unit tests
-        run: dotnet test -c release --no-restore -p:VSTestUseMSBuildOutput=false --logger "trx"
-
-      - name: 🛒 Test Report
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: 'CI Test Results ${{ matrix.os }}'
-          reporter: 'dotnet-trx'
-          list-tests: 'failed'
-          list-suites: 'failed'
-          path: '**/*.trx'
-          fail-on-error: false
+        run: dotnet test -c release --no-restore
 
       - name: 📛 Upload hang- and crash-dumps on test failure
         if: success() || failure()
