chore: upgrade all packages to dotnet 9

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,11 +3,11 @@
 {
 	"name": "Full",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/dotnet/sdk:9.0-preview",
+	"image": "mcr.microsoft.com/dotnet/sdk:9.0",
 	"features": {
 		"ghcr.io/devcontainers/features/dotnet:2": {
 			"version": "latest",
-			"additionalVersions": "7.0,6.0,5.0,3.1"
+			"additionalVersions": "8.0,7.0,6.0,5.0,3.1"
 		}
 	},
 
